Integrate Foundation and add ‘Back’ buttons

--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -2,8 +2,26 @@
 
 	<section class="page-content">
 
-		<h1>Terms of Service</h1>
+        <h1>Terms of Service</h1>
 
-		<p>This is the terms of service page.</p>
+        <div class="row">
+
+            <div class="columns small-10 small-offset-1 medium-6 medium-offset-3 large-6 large-offset-3">
+
+                <p>This is the terms of service page.</p>
+
+                <form>
+                    <div class="action-buttons">
+                        <button
+                            type="button"
+                            class="form-btn"
+                            ng-click="go('back', 'slideRight');">Back</button>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+
 	</section>
 </div>
