--- a/client/pages/privacy.html
+++ b/client/pages/privacy.html
@@ -4,6 +4,25 @@
 
 		<h1>Privacy Policy</h1>
 
-		<p>This is the privacy policy page.</p>
+        <div class="row">
+
+            <div class="columns small-10 small-offset-1 medium-6 medium-offset-3 large-6 large-offset-3">
+
+                <p>This is the privacy policy page.</p>
+
+                <form>
+                    <div class="action-buttons">
+                        <button
+                            type="button"
+                            class="form-btn"
+                            ng-click="go('back', 'slideRight');">Back</button>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+
 	</section>
+
 </div>
