Password reset flow logic/UI
Remove animate class from top panels (forgot.html and reset.html) for smoother animation on state change. Disable reset.html submit button for invalid token. Create reset success/failure feedback UI. Add node-hat for token generation. Update /api/reset get and post routes for token check, one-time use. Create a resetAuth model to separate password resets from user accounts.

--- a/client/pages/forgot.html
+++ b/client/pages/forgot.html
@@ -1,6 +1,6 @@
 <div class="page forgot-page">
 
-	<section class="page-content animate" ng-cloak ng-show="!resetSuccess">
+	<section class="page-content" ng-cloak ng-show="!resetSuccess">
 
 		<h1>Forgot your password?</h1>
 
