Main page Foundation grid layout

--- a/client/pages/main.html
+++ b/client/pages/main.html
@@ -1,9 +1,18 @@
 <div class="page main-page">
 
-    <!-- Content -->
     <section class="page-content">
-       <h1>Main</h1>
-       <p>This is the main page.</p>
+
+        <h1>Main</h1>
+
+        <div class="row">
+
+            <div class="columns small-10 small-offset-1">
+
+                <p>This is the main page. Authenitcated users are directed here by default.</p>
+            </div>
+
+        </div>
+
     </section>
 
 </div>
