TOS and Privacy layout updates

--- a/client/pages/privacy.html
+++ b/client/pages/privacy.html
@@ -6,7 +6,7 @@
 
         <div class="row">
 
-            <div class="columns small-10 small-offset-1 medium-6 medium-offset-3 large-6 large-offset-3">
+            <div class="columns small-10 small-offset-1">
 
                 <p>Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.</p>
 
