--- a/client/pages/tos.html
+++ b/client/pages/tos.html
@@ -2,16 +2,11 @@
 
 	<section class="page-content">
 
-        <h1>Terms of Service</h1>
+        <h1> Web Site Terms and Conditions of Use</h1>
 
         <div class="row">
 
             <div class="columns small-10 small-offset-1">
-
-
-                <h2>
-                    Web Site Terms and Conditions of Use
-                </h2>
 
                 <h3>
                     1. Terms
