Add description text

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="columns medium-6">
                     <h1>MEAN Seed</h1>
-                    <h2>A starter project for mongoDB, Express, AngularJS, and node.js</h2>
+                    <h2>A starter project for building RESTful applications with mongoDB, Express, AngularJS, and node.js</h2>
                 </div>
             </div>
             <div class="hero-image">
