Homepage hero section content and styles

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -7,7 +7,12 @@
             <div class="row">
                 <div class="columns medium-6">
                     <h1>MEAN Seed</h1>
-                    <h2>A starter project for building RESTful applications with mongoDB, Express, AngularJS, and node.js</h2>
+                    <h2>A starter project for building RESTful applications with mongoDB, Express, AngularJS, and node.js. Built on <a href="http://foundation.zurb.com" target="_blank">Foundation.</a></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="medium-5 columns">
+                    <a target="_blank" href="https://github.com/ppuleo/mean-seed" class="large button hide-for-small">Download MEAN Seed v0.1</a>
                 </div>
             </div>
             <div class="hero-image">
