Layout changes for responsive design

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -11,17 +11,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class="medium-5 columns">
+                <div class="medium-6 large-5 columns">
                     <a target="_blank" href="https://github.com/ppuleo/mean-seed" class="large button hide-for-small">Download MEAN Seed v0.1</a>
                 </div>
             </div>
-            <div class="hero-image">
+            <div class="hide-for-small hero-image">
                 <img alt="mean-seed-mascot" src="/assets/img/mean-seed-hero.svg" />
             </div>
 
         </section>
 
-        <section class="content">
+        <section class="homepage-content">
 
             <div class="row">
 
