Styles and layout
Custom style overrides and layouts for mean seed site

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -16,9 +16,17 @@
                 </div>
             </div>
             <div class="hide-for-small hero-image">
-                <img alt="mean-seed-mascot" src="/assets/img/mean-seed-hero.svg" />
+                <img alt="mean-seed-mascot" src="/assets/img/mean-seed-hero-g.svg" />
             </div>
 
+        </section>
+
+        <section class="homepage-gitinfo">
+            <div class="row">
+                <div class="columns small-12">
+                    Lastest Update on Github
+                </div>
+            </div>
         </section>
 
         <section class="homepage-content">
