Better page transitions for mobile

--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -128,7 +128,7 @@
 								type="checkbox"
 								id="legal-checkbox"
 								required
-							> I accept the <a ng-click="go('/tos', 'slideLeft')">terms of service</a> &amp; <a ng-click="go('/privacy', 'slideLeft')">privacy policy</a>.
+							> I accept the <a ng-click="go('/tos')">terms of service</a> &amp; <a ng-click="go('/privacy')">privacy policy</a>.
 						</label>
 					</div>
 
