--- a/client/pages/privacy.html
+++ b/client/pages/privacy.html
@@ -26,7 +26,7 @@
                         <button
                             type="button"
                             class="form-btn"
-                            ng-click="go('back', 'slideRight');"
+                            ng-click="go('back');"
                         >Back</button>
                     </div>
 
